# pyguitar

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
examples/: fretboard.py  tool.py
scripts/: fretboard.py  tool.py
src/pyfrets/: chords.py  guitar.py  notes.py  tracks.py
src/pyguitar/: about.py  chords.py  guitar.py  notes.py  tracks.py
stubs/: mido.pyi  pydyf.pyi
tests/: test_chords.py  test_notes.py  test_tracks.py
