[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pyguitar"
description = "Python tools for guitar players"
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-2-Clause"
authors = [
    { name = "Jeremy Lainé", email = "jeremy.laine@m4x.org" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "colorama",
    "mido",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",
    "mypy",
    "ruff",
    "types-colorama",
]

[project.urls]
homepage = "https://github.com/jlaine/pyguitar"

[tool.mypy]
mypy_path = "stubs"
strict = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "W",  # pycodestyle
    "I",  # isort
]

[tool.setuptools.dynamic]
version = {attr = "pyguitar.__version__"}
